# design-patterns

./: .gitignore  CMakeLists.txt
behavioral/: CMakeLists.txt
behavioral/command/: command.h  concrete_command.h  invoker.h  main.cpp  receiver.h
creational/: CMakeLists.txt
creational/singleton/: main.cpp  singleton.h
proxy/: main.cpp  subject.h
singleton/: singleton.h
solid/: CMakeLists.txt
solid/dependency_inversion_principle/: main.cpp  person.h  relationship.h  relationships.h  relationships_browser.h  research.h
solid/interface_segregation_principle/: document.h  machine.h  main.cpp  printer.h  scanner.h
solid/interface_segregation_principle/interfaces/: ifaxer.h  imachine.h  iprinter.h  iscanner.h
solid/liskov_substitution_principle/: main.cpp  process.h  rectangle.h  rectangle_factory.h  square.h
solid/open_closed_principle/: better_filter.h  color.h  color_specification.h  combining_specification.h  filter.h  main.cpp  product.h  size.h  size_specification.h  specification.h
solid/single_responsibility_principle/: journal.h  main.cpp  persistence_manager.h
structural/: CMakeLists.txt
structural/facade/: facade.h  main.cpp  subsystem_one.h  subsystem_three.h  subsystem_two.h
structural/proxy/: main.cpp  proxy.h  real_subject.h  subject.h
